fixed header centering issue on smaller screen

--- a/src/index.css
+++ b/src/index.css
@@ -15,19 +15,19 @@ a {
 
 a:hover {
   transform: scale(1.1);
-  color: #A8A8A8;
+  color: #a8a8a8;
 }
 
 .link {
-  color:#000060;
+  color: #000060;
   font-size: large;
 }
 
 .link:hover {
   transform: scale(1.1);
-  color: #D8D8F0
+  color: #d8d8f0;
 }
- 
+
 .header-bar {
   position: relative;
   display: flex;
@@ -37,42 +37,43 @@ a:hover {
   justify-content: space-between;
   padding: 50px 60px 150px 60px;
   height: auto;
-  background-image: linear-gradient( #1848C0, #000060);
+  background-image: linear-gradient(#1848c0, #000060);
 }
 
 .header-title-box {
   display: flex;
-  flex-flow:row wrap;
+  flex-flow: row wrap;
   flex: 2 1 auto;
   justify-content: center;
 }
 
 .header-title {
   flex: 1 auto;
+  text-align: "center";
 }
 
 .header-title h1 {
-  font-size: 72px
+  font-size: 72px;
 }
 
 .header-title h2 {
-  font-size: 48px
+  font-size: 48px;
 }
 
 .logo {
-  flex: 1 1 auto; 
+  flex: 1 1 auto;
   max-width: 150px;
   height: 110px;
 }
 
 .header-links {
- display: flex;
- flex-flow: row;
- flex: 1 1 auto;
- justify-content: space-around;
- font-size: 28px;
- margin-top: 50px;
- text-decoration: none;
+  display: flex;
+  flex-flow: row;
+  flex: 1 1 auto;
+  justify-content: space-around;
+  font-size: 28px;
+  margin-top: 50px;
+  text-decoration: none;
 }
 
 .label {
@@ -87,7 +88,14 @@ a:hover {
   padding: 15vh 10vw;
   text-align: center;
   margin-top: -100px;
-  clip-path: polygon(0 0,50% 5vw,100% 0,100% calc(100% - 5vw),50% 100%, 0 calc(100% - 5vw));
+  clip-path: polygon(
+    0 0,
+    50% 5vw,
+    100% 0,
+    100% calc(100% - 5vw),
+    50% 100%,
+    0 calc(100% - 5vw)
+  );
   background-color: white;
 }
 
@@ -97,7 +105,7 @@ a:hover {
   border-radius: 50%;
 }
 
-.about-me h2{
+.about-me h2 {
   color: #000060;
 }
 
@@ -126,9 +134,15 @@ a:hover {
   text-align: center;
   margin: -100px 0;
   padding-bottom: 200px;
-  clip-path: polygon(0 0,50% 5vw,100% 0,100% calc(100% - 5vw),50% 100%, 0 calc(100% - 5vw));
+  clip-path: polygon(
+    0 0,
+    50% 5vw,
+    100% 0,
+    100% calc(100% - 5vw),
+    50% 100%,
+    0 calc(100% - 5vw)
+  );
   background-color: lightgray;
-
 }
 
 .skills {
@@ -201,12 +215,18 @@ a:hover {
   width: 100%;
   padding: 35vh 10vw;
   margin: -100px 0;
-  clip-path: polygon(0 0,50% 5vw,100% 0,100% calc(100% - 5vw),50% 100%, 0 calc(100% - 5vw));
+  clip-path: polygon(
+    0 0,
+    50% 5vw,
+    100% 0,
+    100% calc(100% - 5vw),
+    50% 100%,
+    0 calc(100% - 5vw)
+  );
 }
 
 .right {
   background-color: white;
-
 }
 
 .left {
@@ -215,7 +235,7 @@ a:hover {
 
 .project-img {
   flex: 5 1 auto;
-  width:70%;
+  width: 70%;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -261,10 +281,9 @@ a:hover {
   text-align: center;
 }
 
-.project-links .link:hover{
-  color: #1848C0;
+.project-links .link:hover {
+  color: #1848c0;
 }
-
 
 .project-thumbnail {
   width: 95%;
@@ -281,15 +300,14 @@ a:hover {
   display: flex;
   flex-flow: column;
   justify-content: space-around;
-  align-items: center; 
+  align-items: center;
   text-align: center;
   background-color: #000060;
-  color:white;
+  color: white;
   margin-top: -100px;
   padding: 100px 0 25px 0;
-  clip-path: polygon(0 0,50% 5vw,100% 0,100% 100%, 0 100%);
-  background-image: linear-gradient( #1848C0, #000060);
-
+  clip-path: polygon(0 0, 50% 5vw, 100% 0, 100% 100%, 0 100%);
+  background-image: linear-gradient(#1848c0, #000060);
 }
 
 .footer h2 {
@@ -306,18 +324,18 @@ a:hover {
   margin: 50px 0;
 }
 
-.contact-info-right, .contact-info-left {
+.contact-info-right,
+.contact-info-left {
   margin-top: 50px;
   display: flex;
   flex-flow: row wrap;
   width: 50%;
-  justify-content: space-around; 
+  justify-content: space-around;
 }
-
 
 @media all and (max-width: 1100px) {
   .project {
-    flex-flow: column;  
+    flex-flow: column;
     align-items: center;
     justify-content: center;
     height: auto;
@@ -328,8 +346,18 @@ a:hover {
     order: 1;
   }
 
+  .header-title-box {
+    width: auto;
+    flex-flow: column;
+    align-items: center;
+  }
+
+  .header-title {
+    text-align: "center";
+  }
+
   .project-info {
-    flex-flow: column ;
+    flex-flow: column;
     width: 100%;
     margin: auto;
     order: 2;
@@ -342,7 +370,6 @@ a:hover {
 }
 
 @media all and (max-width: 815px) {
-
   .header-bar {
     height: auto;
   }
@@ -377,7 +404,6 @@ a:hover {
 }
 
 @media all and (max-width: 525px) {
-
   .header-bar {
     height: auto;
   }
@@ -424,7 +450,8 @@ a:hover {
     width: auto;
   }
 
-  .contact-info-right, .contact-info-left {
+  .contact-info-right,
+  .contact-info-left {
     width: 70%;
   }
 }
